[1900655] Compare advanced subset now applies to current and comparison
databases.
[1478022] Correct description of this fix in the Release Notes to avoid
user confusion thinking it does something different.
[] Ensure first entry is selected when opening an existing database.

Changes to Existing Features in 3.12.01
=======================================
[] Improved compare database reporting.

New Features for 3.12.01
========================
[1904254] Search now selects all text fields by default.
[1901380] Find result highlighted and selected.
[1901380] If the Esc key is not being used to minimize PasswordSafe,
then it will close the Find Toolbar if active.
[1901380] F3 (Repeat Find) works even if the Find Toolbar has been closed.
[] Last clipboard action now shown in Status Bar.

Bugs fixed in 3.12
==================
[1855658, 1436850] Implement font for password display correctly.
[1850271] Save after Compare no longer corrupts database.
[1849881, 700973] Pressing a character in the List view will now jump to the
next entry with text beginning with that character in the second column. This
is a change from previous behaviour, which only looked in the first column,
now occupied by the icon.
[1849830] Help now works properly for Manage->Option, displaying the
relevant topic.
[1849818] Browse-to no longer falsely reports "failed to browse to
URL".
[1843631] "Browse to Icon" now correctly shown using new Toolbar.
[1841525] Increasing the number of passwords saved no longer deletes the
existing Password History.
[1833609, 1535341, 1502036] Fully support multiple monitors.
[1749268] Mouse clicks on tree view plus/minus boxes now works correctly.
[1670193] Better Vista support (Allow use of Windows Common Controls
V6 with Vista).
[1478022] User must save a restored database before it can be exported.
[1440693] Fix standard keyboard access to context menu (Shift+F10).
[] Allow Expand/Collapse for read-only databases via toolbar.